adding 1st project

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: John Doe # your name (or website title) here
-logo: "/images/profile_cropped.jpg?raw=true" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
+title: Emily Branch
+logo: "/images/profile_cropped.jpg?raw=true" 
+description: 
   Interested in climate adaptation and mitigation.
   <br><br>
   Backgrounds in urban planning, computer science, and spatial data science from Penn and UVA. 
